[package]
name = "fire"
version = "0.3.0"
authors = ["AN Long <aisk1988@gmail.com>"]
license = "MIT"
description = "fire implementation for rust"
repository = "https://github.com/aisk/rust-fire"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
lazy_static = "1.4.0"
proc-macro2 = "1.0.66"
quote = "1.0.32"
syn = { version = "2.0.28", features = ["full"] }

[dev-dependencies]
serial_test = "2.0.0"
