[package]
name = "fire"
version = "0.5.0"
authors = ["An Long <aisk1988@gmail.com>"]
license = "BSD-2-Clause"
description = "fire implementation for rust"
repository = "https://github.com/aisk/rust-fire"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1.0.66"
quote = "^1.0.32"
syn = { version = "^2.0.28", features = ["full"] }

[dev-dependencies]
tokio = { version = "^1", features = ["rt-multi-thread", "time"] }
